@@ -133,6 +133,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> column-header-active </td><td class="wiki"> Active state of column header(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-visible </td><td class="wiki"> Visible state of column(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-type </td><td class="wiki"> Data type of column(s) </td><td class="wiki"> <i>type0</i> <code>|</code> <i>type1</i> <code>|</code> ... (<code>string</code>, <code>int64</code>, <code>uint64</code> or <code>double</code>) </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> column-sort-function </td><td class="wiki"> The sorting algorithm for each column </td><td class="wiki"> <i>func0</i> <code>|</code> <i>func1</i> <code>|</code> ... (<code>0</code> default, <code>1</code> strnatcmp or <code>2</code> strcasenatcmp) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> selection-mode </td><td class="wiki"> Selection method </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code>, <code>3</code> (none, single, browse, multiple) </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> icon-name </td><td class="wiki"> Default GTK theme icon name for all rows </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> stock-id </td><td class="wiki"> Default GTK stock icon ID for all rows </td><td class="wiki"> <code>gtk-about</code>, <code>gtk-add</code>, ... (<a href="http://developer.gnome.org/gtk/2.24/gtk-Stock-Items.html#GTK-STOCK-ABOUT:CAPS">full list</a>) </td><td class="wiki"> </td></tr>
@@ -257,7 +258,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-13 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-14 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
